added linkedin link & fixed some typos

--- a/basesite/templates/index.html
+++ b/basesite/templates/index.html
@@ -53,7 +53,7 @@
 
             <p class="lead">M.Sc. (Tech.) Student, BBA</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jesse-backman-0aa6436a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="profile-img"></div>
@@ -81,8 +81,8 @@
                 </p>
 
                 <p>
-                  The website is running on my personal Ubuntu server, using Apache+gunicorn to run the Django application.
-                  It runs Travis CI for continous testing & integration. In the future I will likely host some random services to be accessible through the site.
+                  The website is running on my personal Ubuntu server, using Apache+wsgi_mod to run the Django application. SSL Certification from letsencrypt.org.
+                  The runs Travis CI for continous testing & integration. In the future I will likely host some random services to be accessible through the site.
                 </p>
             </div>
         </div>
@@ -169,7 +169,7 @@
                     <p>
                       <div class="list">
                         <li>Modularity</li>
-                        <li>Developement process</li>
+                        <li>Development process</li>
                         <li>CAE</li>
                       </div>
                     </p>
