--- a/basesite/templates/index.html
+++ b/basesite/templates/index.html
@@ -82,7 +82,7 @@
 
                 <p>
                   The website is running on my personal Ubuntu server, using Apache+mod_wsgi to run the Django application. SSL Certification from letsencrypt.org.
-                  The runs Travis CI for continous testing & integration. In the future I will likely host some random services to be accessible through the site.
+                  The server runs Travis CI for continous testing & integration. In the future I will likely host some random services to be accessible through the site.
                 </p>
             </div>
         </div>
